--- a/CeleryMisfortune/wwwroot/sitecss/wtm.css
+++ b/CeleryMisfortune/wwwroot/sitecss/wtm.css
@@ -1,44 +1,170 @@
 .donotuse_pdiv {
-  height: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 .donotuse_fill {
-  -webkit-box-flex: 1;
-  -webkit-flex: auto;
-  -moz-box-flex: 1;
-  -ms-flex: auto;
-  flex: auto;
+    -webkit-box-flex: 1;
+    -webkit-flex: auto;
+    -moz-box-flex: 1;
+    -ms-flex: auto;
+    flex: auto;
 }
 
 .layui-side-menu .layui-nav .layui-nav-item ._wtmicon {
-  position: absolute;
-  top: 50%;
-  left: 20px;
-  margin-top: -19px;
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    margin-top: -19px;
 }
 
 /* 列表中chebox样式*/
 [lay-skin=primary].layui-form-checkbox span {
     padding-left: 22px !important
-}   
+}
 /* 下拉框 Text 图标 */
 
 .layui-form-select ._wtm-combo-icon {
-  left: 10px;
-  position: absolute;
-  top: 30%;
-  transition: all .3s;
-  -webkit-transition: all .3s;
+    left: 10px;
+    position: absolute;
+    top: 30%;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+}
+
+/** layui样式覆盖 */
+.layui-btn {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0 15px;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: #fff;
+    white-space: nowrap;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+    .layui-btn:hover {
+        opacity: 0.8;
+        filter: alpha(opacity=80);
+        color: #fff;
+    }
+
+/* 原始 */
+.layui-btn-primary {
+    border: 1px solid #C9C9C9;
+    background-color: #fff;
+    color: #555;
+}
+
+    .layui-btn-primary:hover {
+        border-color: #1890FF;
+        color: #333
+    }
+/* 百搭 */
+.layui-btn-normal {
+    background-color: #2d8cf0;
+}
+/* 暖色 */
+.layui-btn-warm {
+    background-color: #ff9900;
+}
+/* 警告 */
+.layui-btn-danger {
+    background-color: #ed4014;
+}
+/* 原版 */
+.layui-btn-origin {
+    background-color: #009688;
+}
+/* 禁用 */
+.layui-btn-disabled, .layui-btn-disabled:hover, .layui-btn-disabled:active {
+    border: 1px solid #e6e6e6;
+    background-color: #FBFBFB;
+    color: #C9C9C9;
+    cursor: not-allowed;
+    opacity: 1;
+}
+
+/* form表单 */
+.layui-form-select dl dd.layui-this {
+    background-color: #2d8cf0;
+    color: #fff;
+}
+
+.layui-form-radio > i:hover, .layui-form-radioed > i {
+    color: #2d8cf0;
+    border-color: #2d8cf0;
+}
+
+.layui-form-checked[lay-skin=primary] i {
+    border-color: #2d8cf0 !important;
+    background-color: #2d8cf0;
+    color: #fff;
+}
+
+.layui-form-onswitch {
+    border-color: #2d8cf0;
+    background-color: #2d8cf0;
+}
+
+    .layui-form-onswitch em {
+        color: #fff !important;
+    }
+
+.layui-form-checked, .layui-form-checked:hover {
+    border-color: #2d8cf0;
+}
+
+    .layui-form-checked span {
+        background-color: #2d8cf0;
+    }
+
+    .layui-form-checked i, .layui-form-checked:hover i {
+        color: #2d8cf0;
+    }
+/* 导航 */
+.layui-nav-tree .layui-nav-child dd.layui-this, .layui-nav-tree .layui-nav-child dd.layui-this a, .layui-nav-tree .layui-this, .layui-nav-tree .layui-this > a, .layui-nav-tree .layui-this > a:hover {
+    background-color: #2d8cf0;
+}
+
+.layui-nav-tree .layui-nav-bar {
+    background-color: #2d8cf0;
+}
+/* 分页 */
+.layui-laypage .layui-laypage-curr .layui-laypage-em {
+    background-color: #2d8cf0;
+}
+
+.layui-laypage a:hover {
+    color: #2d8cf0;
+}
+
+.layui-laypage select:focus {
+    border-color: #2d8cf0 !important;
+}
+/* 引用块 */
+.layui-elem-quote {
+    margin-bottom: 10px;
+    padding: 15px;
+    line-height: 22px;
+    border-left: 5px solid #009688;
+    border-radius: 0 2px 2px 0;
+    background-color: #2d8cf0;
 }
