添加人物面板，角色选择进入主面板逻辑，部分数据结构 调优

--- a/CeleryMisfortune/Views/PlayerSpecial/Details.cshtml
+++ b/CeleryMisfortune/Views/PlayerSpecial/Details.cshtml
@@ -8,6 +8,7 @@
 <wt:display field="Entity.Endurance" />
 <wt:display field="Entity.Charisma" />
 <wt:display field="Entity.Intelligence" />
+<wt:display field="Entity.Agility" />
 <wt:display field="Entity.Luck" />
 </wt:row>
     <wt:row align=" AlignEnum.Right">
