--- a/CeleryMisfortune/Views/PlayerSpecial/Edit.cshtml
+++ b/CeleryMisfortune/Views/PlayerSpecial/Edit.cshtml
@@ -8,6 +8,7 @@
 <wt:textbox field="Entity.Endurance" />
 <wt:textbox field="Entity.Charisma" />
 <wt:textbox field="Entity.Intelligence" />
+<wt:textbox field="Entity.Agility" />
 <wt:textbox field="Entity.Luck" />
 </wt:row>
     <wt:hidden field="Entity.ID" />
