--- a/CeleryMisfortune/Views/PlayerSpecial/Index.cshtml
+++ b/CeleryMisfortune/Views/PlayerSpecial/Index.cshtml
@@ -2,6 +2,8 @@
 
 <wt:searchpanel vm="@Model" reset-btn="true">
 <wt:row items-per-row="ItemsPerRowEnum.Three">
+<wt:textbox field="Searcher.FK_PlayerGuId" />
+<wt:textbox field="Searcher.Strength" />
 </wt:row>
 </wt:searchpanel>
 <wt:grid vm="@Model" url="/PlayerSpecial/Search"/>
