--- a/CeleryMisfortune/Views/PlayerSpecial/Delete.cshtml
+++ b/CeleryMisfortune/Views/PlayerSpecial/Delete.cshtml
@@ -9,6 +9,7 @@
 <wt:display field="Entity.Endurance" />
 <wt:display field="Entity.Charisma" />
 <wt:display field="Entity.Intelligence" />
+<wt:display field="Entity.Agility" />
 <wt:display field="Entity.Luck" />
 </wt:row>
     <wt:hidden field="Entity.ID" />
